tests/unreachable/unreachable.exp
Error -------------------------------------------------------- typecheck.js:4:10

Cannot return `bar()` because number is incompatible with string.


Error ------------------------------------------------------- typecheck.js:21:21

Cannot assign `n` to `y` because number is incompatible with string.


Error ------------------------------------------------------ unreachable.js:5:19

Cannot call `baz` because uninitialized variable is not a function.


Error ----------------------------------------------------- unreachable.js:13:13

Unreachable code.


Error ----------------------------------------------------- unreachable.js:22:11

Unreachable code.


Error ----------------------------------------------------- unreachable.js:24:11

Unreachable code.



Found 6 errors
